try to fix alignment

--- a/css/style.css
+++ b/css/style.css
@@ -72,6 +72,10 @@ h2 {
   max-width: 1040px;
 }*/
 
+.mainSection {
+  text-align: center;
+}
+
 .mainSection a {
   font-family: 'Neuton', serif;
   font-size: 48px;
